# parallel_computation

./: .gitignore  README.md
cuda_floyd/: CMakeLists.txt  main.cpp
cuda_floyd/input/big/: V1000-E15000
cuda_floyd/src/: cpu_floyd.cpp  cpu_floyd.h  floyd.cpp  floyd.h  gpu_floyd.cu  gpu_floyd.h
cuda_floyd/src/utils/: timer.h
dijkstra_mpi/: CMakeLists.txt
dijkstra_mpi/src/: test.cpp
dijkstra_mpi/src/dijkstra/: dijkstra.cpp  dijkstra.h
dijkstra_mpi/src/mpi/: main.cpp
dijkstra_mpi/src/serial/: main.cpp
dijkstra_mpi/src/utils/: debug.h  map.cpp  map.h
